{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "04f09354-c389-40fb-9969-d9a8e3274cef",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "f40c457a-5bca-44ab-ab58-420a78af0e61",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "07c16691-729d-4542-a34e-ce9f6fdeb553",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "9f49454b-e14b-4553-87f6-ab66a0f577a2",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "97eb88aa-5ff9-42a3-b0c3-26d1bad4f606",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "69ffba46-d445-451f-8d78-5176e45970b0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4a0f5285-9c98-46ae-bace-f0eb4bb5b917",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "22fc666d-cc42-46d7-88a6-c072ae9b820a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerAction",
            "id": "37a41a91-ae32-40f6-bba3-8713f65a69af",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "3ee04bb1-06b4-47cb-9801-d78c2642b610",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ed3a922-26d5-41c8-bcd7-f6143909a0ac",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}